--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alarm-clock",
   "version": "0.1.0",
   "private": true,
-  "author": "Hesbon Osoro <hesbonosoro1@gmail.com>",
+  "author": "Md Tanvir Ahamed Shanto <mdtanvirahamedshanto@gmail.com>",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
